--- a/charts/matrix-stack/templates/haproxy/configmap.yaml
+++ b/charts/matrix-stack/templates/haproxy/configmap.yaml
@@ -4,18 +4,18 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- with .Values.synapse -}}
-{{- if .enabled -}}
+{{- if $.Values.synapse.enabled -}}
+{{- with .Values.haproxy -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
-  name: {{ $.Release.Name }}-synapse-haproxy
+    {{- include "element-io.haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-haproxy
   namespace: {{ $.Release.Namespace }}
 data:
   haproxy.cfg: |
-    {{- tpl ($.Files.Get "configs/synapse/haproxy.cfg.tpl") (dict "root" $ "context" .) | nindent 4 }}
+    {{- tpl ($.Files.Get "configs/haproxy/haproxy.cfg.tpl") (dict "root" $ "context" .) | nindent 4 }}
   path_map_file: |
     # A map file that is used in haproxy config to map from matrix paths to the
     # named backend. The format is: path_regexp backend_name
@@ -33,7 +33,7 @@ data:
   path_map_file_get: |
     # A map file that is used in haproxy config to map from matrix paths to the
     # named backend. The format is: path_regexp backend_name
-    {{ if dig "client-reader" "enabled" false .workers }}
+    {{ if dig "client-reader" "enabled" false $.Values.synapse.workers }}
     ^/_matrix/client/(api/v1|r0|v3|unstable)/pushrules/ client-reader
     {{- end }}
   429.http: |
