--- a/charts/matrix-stack/templates/synapse/synapse_http_service.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_http_service.yaml
@@ -10,8 +10,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
-  name: {{ $.Release.Name }}-synapse-haproxy
+    {{- include "element-io.haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
+  name: {{ $.Release.Name }}-haproxy
   namespace: {{ $.Release.Namespace }}
 spec:
   type: {{ .ingress.service.type | default $.Values.ingress.service.type }}
@@ -26,6 +26,6 @@ spec:
     port: 8405
     targetPort: haproxy-metrics
   selector:
-    app.kubernetes.io/instance: "{{ $.Release.Name }}-synapse-haproxy"
+    app.kubernetes.io/instance: "{{ $.Release.Name }}-haproxy"
 {{- end -}}
 {{- end -}}
