--- a/charts/matrix-stack/templates/synapse/synapse_http_service.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_http_service.yaml
@@ -10,8 +10,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
-  name: {{ $.Release.Name }}-haproxy
+    {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
 spec:
   type: {{ .ingress.service.type | default $.Values.ingress.service.type }}
