--- a/charts/matrix-stack/ci/well-known-minimal-values.yaml
+++ b/charts/matrix-stack/ci/well-known-minimal-values.yaml
@@ -2,6 +2,8 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
+serverName: ess.localhost
+
 elementWeb:
   enabled: false
 
@@ -9,4 +11,4 @@ synapse:
   enabled: false
 
 wellKnownDelegation:
-  enabled: false
+  enabled: true
