--- a/charts/matrix-stack/templates/haproxy/configmap.yaml
+++ b/charts/matrix-stack/templates/haproxy/configmap.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- if $.Values.synapse.enabled -}}
+{{- if or $.Values.synapse.enabled $.Values.wellKnownDelegation.enabled -}}
 {{- with .Values.haproxy -}}
 apiVersion: v1
 kind: ConfigMap
@@ -16,26 +16,6 @@ metadata:
 data:
   haproxy.cfg: |
     {{- tpl ($.Files.Get "configs/haproxy/haproxy.cfg.tpl") (dict "root" $ "context" .) | nindent 4 }}
-  path_map_file: |
-    # A map file that is used in haproxy config to map from matrix paths to the
-    # named backend. The format is: path_regexp backend_name
-
-    {{ $enabledWorkerTypes := keys ((include "element-io.synapse.enabledWorkers" (dict "root" $)) | fromJson) }}
-    {{- range $workerType := $enabledWorkerTypes | sortAlpha }}
-    {{- $workersPaths := (include "element-io.synapse.process.workerPaths" (dict "root" $ "context" (dict "workerType" $workerType "enabledWorkerTypes" $enabledWorkerTypes))) | fromJsonArray }}
-    {{- if len $workersPaths }}
-    # {{ $workerType }}
-    {{- range $path := $workersPaths }}
-    {{ $path }} {{ $workerType }}
-    {{- end }}
-    {{ end }}
-    {{- end }}
-  path_map_file_get: |
-    # A map file that is used in haproxy config to map from matrix paths to the
-    # named backend. The format is: path_regexp backend_name
-    {{ if dig "client-reader" "enabled" false $.Values.synapse.workers }}
-    ^/_matrix/client/(api/v1|r0|v3|unstable)/pushrules/ client-reader
-    {{- end }}
   429.http: |
     HTTP/1.0 429 Too Many Requests
     Cache-Control: no-cache
