--- a/charts/matrix-stack/templates/haproxy/service.yaml
+++ b/charts/matrix-stack/templates/haproxy/service.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- if $.Values.synapse.enabled -}}
+{{- if or $.Values.synapse.enabled $.Values.wellKnownDelegation.enabled -}}
 {{- with .Values.haproxy -}}
 apiVersion: v1
 kind: Service
