--- a/charts/matrix-stack/templates/haproxy/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/haproxy/serviceaccount.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- if $.Values.synapse.enabled -}}
+{{- if or $.Values.synapse.enabled $.Values.wellKnownDelegation.enabled -}}
 {{- with .Values.haproxy -}}
 {{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "haproxy")) }}
 {{- end -}}
