--- a/charts/matrix-stack/templates/synapse/synapse_ingress.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_ingress.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- with .Values.synapse -}}
+{{- with $.Values.synapse -}}
 {{- if .enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
