--- a/charts/matrix-stack/templates/well-known/service.yaml
+++ b/charts/matrix-stack/templates/well-known/service.yaml
@@ -10,8 +10,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.well-known-delegation.labels" (dict "root" $ "context" $.Values.haproxy) | nindent 4 }}
-  name: {{ $.Release.Name }}-well-known-haproxy
+    {{- include "element-io.well-known-delegation-ingress.labels" (dict "root" $ "context" $.Values.haproxy) | nindent 4 }}
+  name: {{ $.Release.Name }}-well-known
   namespace: {{ $.Release.Namespace }}
 spec:
   type: {{ .ingress.service.type | default $.Values.ingress.service.type }}
