pytest: check that we can fetch well known delegation

--- a/charts/matrix-stack/ci/pytest-well-known-values.yaml
+++ b/charts/matrix-stack/ci/pytest-well-known-values.yaml
@@ -9,3 +9,7 @@ synapse:
 
 elementWeb:
   enabled: false
+
+wellKnownDelegation:
+  ingress:
+    tlsSecret: "{{ $.Release.Name }}-well-known-web-tls"
