--- a/charts/matrix-stack/templates/synapse/synapse_ingress.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_ingress.yaml
@@ -11,7 +11,7 @@ kind: Ingress
 metadata:
 {{- include "element-io.ess-library.ingress.annotations" (dict "root" $ "context" .ingress.annotations) | nindent 2 }}
   labels:
-    {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse.labels" (dict "root" $ "context" $.Values.haproxy) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
 spec:
