--- a/charts/matrix-stack/ci/well-known-checkov-values.yaml
+++ b/charts/matrix-stack/ci/well-known-checkov-values.yaml
@@ -5,24 +5,13 @@
 serverName: ess.localhost
 
 elementWeb:
-  additional: {
-    "default_server_config": {
-      "m.homeserver": {
-        "base_url": "https://element.ess.localhost",
-      }
-    },
-  }
-
-  ingress:
-    host: element.ess.localhost
-
-  annotations:
-    checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
-    checkov.io/skip2: CKV_K8S_43=No digests
-    checkov.io/skip3: CKV2_K8S_6=No network policy yet
+  enabled: false
 
 synapse:
   enabled: false
 
-wellKnownDelegation:
-  enabled: false
+haproxy:
+  annotations:
+    checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
+    checkov.io/skip2: CKV_K8S_43=No digests
+    checkov.io/skip3: CKV2_K8S_6=No network policy yet
