--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,6 +29,7 @@ jobs:
         test-component:
         - element-web
         - synapse
+        - well-known-delegation
     steps:
     - uses: actions/checkout@v3
       with:
