--- a/tests/integration/fixtures/files/clusters/kind-ci.yml
+++ b/tests/integration/fixtures/files/clusters/kind-ci.yml
@@ -13,6 +13,11 @@ nodes:
     nodeRegistration:
       kubeletExtraArgs:
         node-labels: "ingress-ready=true"
+  - |-
+    apiVersion: kubelet.config.k8s.io/v1beta1
+    kind: KubeletConfiguration
+    containerLogMaxSize: 100Mi
+    containerLogMaxFiles: 10
   extraPortMappings:
   - containerPort: 80
     hostPort: 80
