--- a/tests/integration/fixtures/files/clusters/kind-ci.yml
+++ b/tests/integration/fixtures/files/clusters/kind-ci.yml
@@ -18,6 +18,29 @@ nodes:
     kind: KubeletConfiguration
     containerLogMaxSize: 100Mi
     containerLogMaxFiles: 10
+  - |
+    kind: ClusterConfiguration
+    apiServer:
+        # enable auditing flags on the API server
+        extraArgs:
+          audit-log-path: /var/log/kubernetes/kube-apiserver-audit.log
+          audit-policy-file: /etc/kubernetes/policies/audit-policy.yaml
+        # mount new files / directories on the control plane
+        extraVolumes:
+          - name: audit-policies
+            hostPath: /etc/kubernetes/policies
+            mountPath: /etc/kubernetes/policies
+            readOnly: true
+            pathType: "DirectoryOrCreate"
+          - name: "audit-logs"
+            hostPath: "/var/log/kubernetes"
+            mountPath: "/var/log/kubernetes"
+            readOnly: false
+            pathType: DirectoryOrCreate
+  extraMounts:
+  - hostPath: /dind-job-shared/audit-policy.yml
+    containerPath: /etc/kubernetes/policies/audit-policy.yaml
+    readOnly: true
   extraPortMappings:
   - containerPort: 80
     hostPort: 80
