Nginx: turn off strict-validate-path-type as it is overly strict

--- a/tests/integration/fixtures/files/charts/ingress-nginx.yml
+++ b/tests/integration/fixtures/files/charts/ingress-nginx.yml
@@ -8,6 +8,8 @@ controller:
 
   config:
     hsts: false
+    # we need this for all our path prefixs with dots, like `.well-known  `
+    strict-validate-path-type: false
 
   hostPort:
     enabled: true
