--- a/charts/matrix-stack/ci/pytest-well-known-values.yaml
+++ b/charts/matrix-stack/ci/pytest-well-known-values.yaml
@@ -2,7 +2,11 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-serverName: ess.localhost
+global:
+  baseDomain: ess.localhost
+
+# To check that templating works against the ingress
+serverName: "{{ $.Values.global.baseDomain }}"
 
 synapse:
   enabled: false
