--- a/charts/matrix-stack/templates/well-known/ingress.yaml
+++ b/charts/matrix-stack/templates/well-known/ingress.yaml
@@ -18,7 +18,7 @@ spec:
 {{- include "element-io.ess-library.ingress.tlsSecret" (dict "root" $ "context" (dict "hosts" (list (.ingress.host | default $.Values.serverName)) "tlsSecret" .ingress.tlsSecret)) | nindent 2 }}
 {{- include "element-io.ess-library.ingress.className" (dict "root" $ "context" .ingress.className) | nindent 2 }}
   rules:
-  - host: "{{ $.Values.wellKnownDelegation.ingress.host | default $.Values.serverName }}"
+  - host: "{{ tpl ($.Values.wellKnownDelegation.ingress.host | default $.Values.serverName) $ }}"
     http:
       paths:
       - path: /.well-known/matrix
