--- a/REUSE.toml
+++ b/REUSE.toml
@@ -19,3 +19,8 @@ SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
 path = "scripts/testdata/**/*.json"
 SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
+
+[[annotations]]
+path = "newsfragments/*.md"
+SPDX-FileCopyrightText = "Copyright 2025 New Vector Ltd"
+SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
