--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -27,6 +27,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Define a cache for the virtual environment based on the dependencies lock file
+      uses: actions/cache@v3
+      with:
+        path: ./.venv
+        key: venv-${{ hashFiles('poetry.lock') }}
+
+    - name: Install dependencies
+      run: |
+        poetry install
+
     - name: Set version
       run: |
         if [ "$GITHUB_REF_TYPE" = "tag" ]; then
