--- a/.github/workflows/changelog_check.yml
+++ b/.github/workflows/changelog_check.yml
@@ -28,6 +28,13 @@ jobs:
 
       - name: Install venv
         run: |
+          # helm/chart-testing-action sets up its own venv that we have no control over
+          # We don't want to use it for this
+          unset VIRTUAL_ENV
+          # Or future actions
+          poetry_venv=$(poetry env info -p)
+          sed -i "s|^VIRTUAL_ENV=.*|VIRTUAL_ENV=$poetry_venv|" "${GITHUB_ENV}"
+
           poetry env info
           poetry install
           echo "$(poetry env info -p)/bin" >> "${GITHUB_PATH}"
