--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -86,7 +86,10 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: helm-package
-        path: charts/matrix-stack/*.tgz*
+        path: |
+          charts/matrix-stack/*.tgz*
+          CHANGELOG.md
+          CHANGELOG.latest.md
         retention-days: 1
 
   release:
@@ -127,7 +130,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         draft: true
-        generate_release_notes: true
+        body_path: CHANGELOG.latest.md
         files: charts/matrix-stack/matrix-stack*.tgz*
         fail_on_unmatched_files: true
         # This could simply be omitted if we didn't want to test without a tag
