fix POSTGRES_PASSWORD key

--- a/charts/matrix-stack/templates/synapse/synapse_secret.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret.yaml
@@ -28,7 +28,7 @@ data:
 {{- end }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.postgres.password" "secretProperty" .postgres.password)) -}}
 {{- with .postgres.password.value }}
-  POSTGRES: {{ . | b64enc }}
+  POSTGRES_PASSWORD: {{ . | b64enc }}
 {{- end }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.registrationSharedSecret" "secretProperty" .registrationSharedSecret)) -}}
 {{- with .registrationSharedSecret.value }}
