--- a/.github/workflows/licensing.yml
+++ b/.github/workflows/licensing.yml
@@ -44,3 +44,9 @@ jobs:
         git config --global --add safe.directory "$GITHUB_WORKSPACE"
         reuse --version
         reuse lint
+
+    - name: SPDX checks
+      run: |
+        git config --global --add safe.directory "$GITHUB_WORKSPACE"
+        reuse --version
+        reuse spdx | ./scripts/spdx_checks.py
