--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ select = [
 
 [tool.towncrier]
 package = ""
-name = "Matrix Stack Chart"
+name = "Element Community Helm Chart"
 filename = "CHANGELOG.md"
 
 # See artifacthub changes kinds https://artifacthub.io/docs/topics/annotations/helm/
