--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -65,12 +65,12 @@ We have an init container to render & merge the config for several reasons:
 */}}
       initContainers:
       - name: render-config
-{{- with .image -}}
+{{- with $.Values.matrixTools.image -}}
 {{- if .digest }}
         image: "{{ .registry }}/{{ .repository }}@{{ .digest }}"
         imagePullPolicy: {{ .pullPolicy | default "IfNotPresent" }}
 {{- else }}
-        image: "{{ .registry }}/{{ .repository }}:{{ required "synapse.image.tag is required if no digest" .tag }}"
+        image: "{{ .registry }}/{{ .repository }}:{{ required "matrixTools.image.tag is required if no digest" .tag }}"
         imagePullPolicy: {{ .pullPolicy | default "Always" }}
 {{- end }}
 {{- end }}
@@ -79,9 +79,7 @@ We have an init container to render & merge the config for several reasons:
           {{- toYaml . | nindent 10 }}
 {{- end }}
         command:
-        - "bash"
-        - "-ce"
-        - >
+        - "/matrix-tools"
           {{- /* The filesystem structure is `/secrets`/<< secret name>>/<< secret key >>.
                  The non-defaulted values are handling the case where the credential is provided by an existing Secret
                  The default values are handling the case where the credential is provided plain in the Helm chart and we add it to our Secret with a well-known key.
@@ -89,33 +87,33 @@ We have an init container to render & merge the config for several reasons:
                  These could be done as env vars with valueFrom.secretKeyRef, but that triggers CKV_K8S_35.
                  If we wanted to allow for replacement of values in the user-provided config with external Secrets we could extend this init-container
                  to allow extraEnv with valueFrom.secretKeyRef. */}}
-          export SYNAPSE_MACAROON=$(cat /secrets/{{ tpl (.macaroon.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .macaroon.secretKey | default "MACAROON" }});
-          export SYNAPSE_POSTGRES_PASSWORD=$(cat /secrets/{{ tpl (.postgres.password.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .postgres.password.secretKey | default "POSTGRES_PASSWORD" }});
-          export SYNAPSE_REGISTRATION_SHARED_SECRET=$(cat /secrets/{{ tpl (.registrationSharedSecret.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .registrationSharedSecret.secretKey | default "REGISTRATION_SHARED_SECRET" }});
-
-          set -x;
-          export APPLICATION_NAME=$(hostname -s | sed 's/.*-synapse-//g');
-          cp /config-templates/log_config.yaml /conf/log_config.yaml;
-
-          python3 /config-templates/render_config_with_secrets.py \
-            /config-templates/01-homeserver-underrides.yaml \
+        - --render-config
+        - /config-templates/01-homeserver-underrides.yaml
           {{- range $key := (.additional | keys | uniq | sortAlpha) -}}
           {{- $prop := index $.Values.synapse.additional $key }}
           {{- if $prop.config }}
-            /secrets/{{ $.Release.Name }}-synapse/user-{{ $key }} \
+        - /secrets/{{ $.Release.Name }}-synapse/user-{{ $key }}
           {{- end }}
           {{- if $prop.configSecret }}
-            /secrets/{{ tpl $prop.configSecret $ }}/{{ $prop.configSecretKey }} \
+        - /secrets/{{ tpl $prop.configSecret $ }}/{{ $prop.configSecretKey }}
           {{- end }}
           {{- end }}
-            /config-templates/04-homeserver-overrides.yaml \
-            /config-templates/05-{{ $processType }}.yaml \
-            > /conf/homeserver.yaml;
-
-          while ! bash -c "cat < /dev/null > /dev/tcp/$POSTGRES_HOST/$POSTGRES_PORT" 2>/dev/null;
-          do sleep 1; echo "waiting for $POSTGRES_HOST:$POSTGRES_PORT";
-          done;
+        - /config-templates/04-homeserver-overrides.yaml
+        - /config-templates/05-{{ $processType }}.yaml
+        - --output
+        - /conf/homeserver.yaml
+        - --tcpwait
+        - {{ (tpl .postgres.host $) }}
+        - {{ .postgres.port | quote }}
         env:
+          - name: SYNAPSE_MACAROON
+            value: secret:///secrets/{{ tpl (.macaroon.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .macaroon.secretKey | default "MACAROON" }}
+          - name: SYNAPSE_POSTGRES_PASSWORD
+            value: secret://secrets/{{ tpl (.postgres.password.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .postgres.password.secretKey | default "POSTGRES_PASSWORD" }}
+          - name: SYNAPSE_REGISTRATION_SHARED_SECRET
+            value: secret:///secrets/{{ tpl (.registrationSharedSecret.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .registrationSharedSecret.secretKey | default "REGISTRATION_SHARED_SECRET" }}
+          - name: APPLICATION_NAME
+            value: hostname://-synapse-
           {{- include "element-io.synapse.env" (dict "root" $ "context" .) | nindent 10 }}
 {{- with .resources }}
         resources:
@@ -212,6 +210,10 @@ We have an init container to render & merge the config for several reasons:
           readOnly: true
           subPath: registration.yaml
 {{- end }}
+        - mountPath: /conf/log_config.yaml
+          name: plain-config
+          subPath: log_config.yaml
+          readOnly: false
         - mountPath: /conf
           name: rendered-config
           readOnly: false
