--- a/matrix-tools/internal/pkg/renderer/testdata/single_file.yml
+++ b/matrix-tools/internal/pkg/renderer/testdata/single_file.yml
@@ -3,3 +3,5 @@
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 key: value
+secretKey: ${SECRET_KEY}
+hostname: ${THIS_HOSTNAME}
