--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -33,7 +33,7 @@ jobs:
         ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Lint with golangci-lint
-      run: cd matrix-tools && golangci-lint run ./...
+      run: ls -l /usr/local && echo $PATH && cd matrix-tools && golangci-lint run ./...
 
     - name: Run tests
       run: cd matrix-tools && go test -v ./...
