matrix-tools: fix licenses

--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -1,4 +1,6 @@
-# Github actions workflow which builds docker images.
+# Copyright 2024 New Vector Ltd
+#
+# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 name: Build Docker Images
 
