--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -87,7 +87,9 @@ We have an init container to render & merge the config for several reasons:
                  These could be done as env vars with valueFrom.secretKeyRef, but that triggers CKV_K8S_35.
                  If we wanted to allow for replacement of values in the user-provided config with external Secrets we could extend this init-container
                  to allow extraEnv with valueFrom.secretKeyRef. */}}
-        - --render-config
+        - render-config
+        - -output
+        - /conf/homeserver.yaml
         - /config-templates/01-homeserver-underrides.yaml
           {{- range $key := (.additional | keys | uniq | sortAlpha) -}}
           {{- $prop := index $.Values.synapse.additional $key }}
@@ -100,10 +102,6 @@ We have an init container to render & merge the config for several reasons:
           {{- end }}
         - /config-templates/04-homeserver-overrides.yaml
         - /config-templates/05-{{ $processType }}.yaml
-        - --output
-        - /conf/homeserver.yaml
-        - --tcpwait
-        - "{{ (tpl .postgres.host $) }}:{{ .postgres.port }}"
         env:
           - name: SYNAPSE_MACAROON
             value: secret:///secrets/{{ tpl (.macaroon.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .macaroon.secretKey | default "MACAROON" }}
@@ -130,6 +128,29 @@ We have an init container to render & merge the config for several reasons:
         - mountPath: /conf
           name: rendered-config
           readOnly: false
+      - name: db-wait
+{{- with $.Values.matrixTools.image -}}
+{{- if .digest }}
+        image: "{{ .registry }}/{{ .repository }}@{{ .digest }}"
+        imagePullPolicy: {{ .pullPolicy | default "IfNotPresent" }}
+{{- else }}
+        image: "{{ .registry }}/{{ .repository }}:{{ required "matrixTools.image.tag is required if no digest" .tag }}"
+        imagePullPolicy: {{ .pullPolicy | default "Always" }}
+{{- end }}
+{{- end }}
+{{- with .containersSecurityContext }}
+        securityContext:
+          {{- toYaml . | nindent 10 }}
+{{- end }}
+        command:
+        - "/matrix-tools"
+        - tcpwait
+        - -address
+        - "{{ (tpl .postgres.host $) }}:{{ .postgres.port }}"
+{{- with .resources }}
+        resources:
+          {{- toYaml . | nindent 10 }}
+{{- end }}
       containers:
       - name: synapse
 {{- with .image -}}
