--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -66,7 +66,8 @@ jobs:
       - name: Get Release Tag
         if: github.ref_type == 'tag' # Only for GitHub releases
         run: |
-          echo "VERSION=${GITHUB_REF#refs/matrix-tools-*/}" >> $GITHUB_ENV
+          echo "Converting $GITHUB_REF to tags"
+          echo "VERSION=${GITHUB_REF#refs\/tags\/matrix-tools-}" >> $GITHUB_ENV
 
       - name: Docker meta
         id: meta
