--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -20,7 +20,7 @@ matrixTools:
 
     ## The tag of the container image to use.
     ## Defaults to the Chart's appVersion if not set
-    tag: sha-6f9b277
+    tag: 0.0.1
 
     ## Container digest to use. Used to pull the image instead of the image tag / Chart appVersion if set
     # digest:
