Add support for .well-known/matrix/support in Well Known Delegation
- Add new support configuration to well-known delegation
- Modify schema to accommodate support configuration
- Update templates to include support file
- Update tests to verify support configuration handling

--- a/charts/matrix-stack/source/wellKnownDelegation.json
+++ b/charts/matrix-stack/source/wellKnownDelegation.json
@@ -18,10 +18,13 @@
         "client": {
           "type": "string"
         },
+        "element": {
+          "type": "string"
+        },
         "server": {
           "type": "string"
         },
-        "element": {
+        "support": {
           "type": "string"
         }
       }
