--- a/charts/matrix-stack/templates/well-known/configmap.yaml
+++ b/charts/matrix-stack/templates/well-known/configmap.yaml
@@ -18,6 +18,8 @@ data:
     {{ (tpl (include "element-io.well-known-delegation.client" (dict "root" $ "context" .)) $) | nindent 4 }}
   server: |
     {{ (tpl (include "element-io.well-known-delegation.server" (dict "root" $ "context" .)) $) | nindent 4 }}
+  support: |
+    {{ (tpl (include "element-io.well-known-delegation.support" (dict "root" $ "context" .)) $) | nindent 4 }}
   element.json: |
     {{ (tpl (include "element-io.well-known-delegation.element" (dict "root" $ "context" .)) $) | nindent 4 }}
 {{- end -}}
