ci values files:  handle init-secrets

--- a/charts/matrix-stack/ci/init-secrets-minimal-values.yaml
+++ b/charts/matrix-stack/ci/init-secrets-minimal-values.yaml
@@ -3,11 +3,10 @@
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 initSecrets:
-  enabled: false
+  enabled: true
 
 elementWeb:
-  ingress:
-    host: element.ess.localhost
+  enabled: false
 
 synapse:
   enabled: false
